feat: 重构页面结构和优化项目配置
- 重命名功能页面为更友好的URL格式
- 更新项目规则和配置文件
- 优化index.html结构和导航
- 完善test-navigation.html功能测试
- 改进unicode.css样式和交互效果
- 重构unicode.js逻辑和用户体验

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
-
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ]
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/image-describer", "destination": "/image-describer.html" },
+    { "source": "/ai-cutout", "destination": "/ai-cutout.html" },
+    { "source": "/turn-images-into-unicode", "destination": "/turn-images-into-unicode.html" },
+    { "source": "/", "destination": "/index.html" }
+  ],
+  "trailingSlash": false,
+  "cleanUrls": true
 }
