参考 Image Describer 完成 Unicode 与 Cutout 页面 SEO 优化；更新导航与站点资源

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,15 @@
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/image-describer", "destination": "/image-describer.html" },
     { "source": "/ai-cutout", "destination": "/ai-cutout.html" },
+    { "source": "/images-for-fb-cover", "destination": "/images-for-fb-cover.html" },
     { "source": "/turn-images-into-unicode", "destination": "/turn-images-into-unicode.html" },
     { "source": "/", "destination": "/index.html" }
   ],
   "redirects": [
     { "source": "/describer", "destination": "/image-describer", "permanent": true },
     { "source": "/describer/", "destination": "/image-describer", "permanent": true }
+    ,{ "source": "/unicode", "destination": "/turn-images-into-unicode", "permanent": true }
+    ,{ "source": "/unicode/", "destination": "/turn-images-into-unicode", "permanent": true }
   ],
   "trailingSlash": false,
   "cleanUrls": true
