--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     { "source": "/turn-images-into-unicode", "destination": "/turn-images-into-unicode.html" },
     { "source": "/ambigram-generator", "destination": "/ambigram-generator.html" },
     { "source": "/400x400-black-image", "destination": "/400x400-black-image.html" },
+    { "source": "/login", "destination": "/login.html" },
     { "source": "/", "destination": "/index.html" }
   ],
   "redirects": [
