Add pixel tools, image proxy, and Vercel rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/image-describer", "destination": "/image-describer.html" },
     { "source": "/ai-cutout", "destination": "/ai-cutout.html" },
     { "source": "/images-for-fb-cover", "destination": "/images-for-fb-cover.html" },
     { "source": "/turn-images-into-unicode", "destination": "/turn-images-into-unicode.html" },
+    { "source": "/turn-image-into-pixel-art", "destination": "/turn-image-into-pixel-art.html" },
     { "source": "/ambigram-generator", "destination": "/ambigram-generator.html" },
+    { "source": "/dandys-world-oc-maker", "destination": "/dandys-world-oc-maker.html" },
     { "source": "/400x400-black-image", "destination": "/400x400-black-image.html" },
     { "source": "/login", "destination": "/login.html" },
+    { "source": "/pixel-editor", "destination": "/pixel-editor.html" },
+    { "source": "/pixel-art-ideas", "destination": "/pixel-art-ideas.html" },
+    { "source": "/pixel-art-ideas/:path*", "destination": "/pixel-art-ideas.html" },
+    { "source": "/pokemon-pixel-art", "destination": "/pokemon-pixel-art.html" },
+    { "source": "/hello-kitty-pixel-art", "destination": "/hello-kitty-pixel-art.html" },
     { "source": "/", "destination": "/index.html" }
   ],
   "redirects": [
