--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/typisin/cus_image/issues"
   },
-  "homepage": "https://github.com/typisin/cus_image#readme"
+  "homepage": "https://github.com/typisin/cus_image#readme",
+  "devDependencies": {
+    "dotenv": "^17.2.3"
+  }
 }
